--- a/Starter-project/.project
+++ b/Starter-project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Starter-project</name>
+	<name>IT_32_2018_Majkic_Dragan</name>
 	<comment></comment>
 	<projects>
 	</projects>
